fix bug 2 scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 @supports (font: -apple-system-body) and (-webkit-appearance: none) { img[loading="lazy"] { clip-path: inset(0.6px) } }
-
+body {
+  overflow: hidden !important;
+}
 .wrapper::after {
   display: block;
   content: "";
